--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gabi</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
     <h1>FELIZ ANIVERSÁRIO</h1>
     <audio autoplay loop>
-        <source src="midia/Tear in My Heart.mp3" type="audio/mpeg">
+        <source src="assets/midia/Tear in My Heart.mp3" type="audio/mpeg">
     </audio>
     <div id="divgeral">
         <div id="div1">
@@ -27,10 +27,10 @@
         </div>
         <div id="div2">
             <h2>Fotos da Susy</h2>
-            <img src="midia/foto1.jpg">
-            <img src="midia/foto2.jpg">
-            <img src="midia/foto3.jpg">
-            <img src="midia/foto4.png">
+            <img src="assets/midia/foto1.jpg">
+            <img src="assets/midia/foto2.jpg">
+            <img src="assets/midia/foto3.jpg">
+            <img src="assets/midia/foto4.png">
         </div>
     </div>
 </body>
